cmake_minimum_required(VERSION 3.10)

project(pdcex)


include_directories(source)

set(LIBS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/libs")


IF(UNIX)
    set(CMAKE_CXX_FLAGS "-std=c++17")

    link_directories("${LIBS_PATH}/unix/pdcurses/")
ELSE (WIN32)
    set(CMAKE_CXX_FLAGS "/std:c++latest")

    include_directories("${LIBS_PATH}/include")
    include_directories("${LIBS_PATH}/include/pdcurses")

    link_directories("${LIBS_PATH}/windows/pdcurses/")
ENDIF (UNIX)

add_executable (pdce0 source/pdce0.c)
add_executable (pdce1 source/pdce1.c)
add_executable (pdce2 source/pdce2.c)
add_executable (pdce3 source/pdce3.c)
add_executable (pdce4 source/pdce4.c)
add_executable (pdce5 source/pdce5.c)
add_executable (pdce6 source/pdce6.c)
add_executable (pdce7 source/pdce7.c)
add_executable (pdce8 source/pdce8.c)
add_executable (pdce9 source/pdce9.c)
add_executable (pdce10 source/pdce10.c)
add_executable (pdce11 source/pdce11.c)
add_executable (pdce12 source/pdce12.cpp)
add_executable (pdce13 source/pdce13.cpp)
add_executable (pdce14 source/pdce14.c)
    
IF(UNIX)
    target_link_libraries(pdce0 m ncurses)
    target_link_libraries(pdce1 m ncurses)
    target_link_libraries(pdce2 m ncurses)
    target_link_libraries(pdce3 m ncurses)
    target_link_libraries(pdce4 m ncurses)
    target_link_libraries(pdce5 m ncurses)
    target_link_libraries(pdce6 m ncurses)
    target_link_libraries(pdce7 m ncurses)
    target_link_libraries(pdce8 m ncurses)
    target_link_libraries(pdce9 m ncurses)
    target_link_libraries(pdce10 m ncurses)
    target_link_libraries(pdce11 m ncursesw)
    target_link_libraries(pdce12 m ncurses)
    target_link_libraries(pdce13 m ncurses)
    target_link_libraries(pdce14 m ncurses)
ELSE (WIN32)
    target_link_libraries(pdce0 pdcurses.lib)
    target_link_libraries(pdce1 pdcurses.lib)
    target_link_libraries(pdce2 pdcurses.lib)
    target_link_libraries(pdce3 pdcurses.lib)
    target_link_libraries(pdce4 pdcurses.lib)
    target_link_libraries(pdce5 pdcurses.lib)
    target_link_libraries(pdce6 pdcurses.lib)
    target_link_libraries(pdce7 pdcurses.lib)
    target_link_libraries(pdce8 pdcurses.lib)
    target_link_libraries(pdce9 pdcurses.lib)
    target_link_libraries(pdce10 pdcurses.lib)
    target_link_libraries(pdce11 pdcurses.lib)
    target_link_libraries(pdce12 pdcurses.lib)
    target_link_libraries(pdce13 pdcurses.lib)
    target_link_libraries(pdce14 pdcurses.lib)
ENDIF (UNIX)

set(CMAKE_BUILD_TYPE Debug)
